refactor!: 4.0 全面审查 - 方言 SPI + 类名去 Mysql + 反射热点 + EXISTS/行锁细粒度
按 spec/changes/4.0-comprehensive-overhaul/proposal.md 实施。

## 三类 breaking change

1. 类名去 Mysql 前缀（带 @Deprecated 别名空壳到 4.1）：
   - MysqlBaseMapper      -> StreamBaseMapper
   - IMysqlServiceBase    -> IStreamService
   - MysqlServiceBaseImpl -> StreamServiceImpl
   - MysqlDataType        -> SqlDataType（enum 无别名，sed 一次替换）

2. getSubSqlSegment 抛 ReflectiveOperationException（去废弃 newInstance API）

3. 包结构已在前序 commit 完成（见 archive/2026-05-18-package-restructure-4x-phase1）

## 新增能力

- 方言 SPI（com.baomidou.mybatisplus.extension.dialect）：
  - SqlDialect 接口 + DbType 枚举 + DialectRegistry（ServiceLoader 自动加载）
  - MySqlDialect 默认实现（行为 100% 兼容 3.x）
  - 用户实现 SqlDialect + META-INF/services 注册即可零侵入扩展 PG/DM/Oracle/...
  - 本库不引入任何 JDBC 驱动

- EXISTS / NOT EXISTS：AbstractWhereLambdaQueryWrapper.exists(subSql) / .notExists(subSql)

- 行锁细粒度：MybatisQueryableStream.forUpdateNoWait() / .forUpdateSkipLocked() / .forUpdateWait(int)

## 性能优化

- ReflectUtils.getLambda 加 ClassValue<Method> 缓存（命中率 > 99%）
- LambdaQueryWrapper.getTable 用字符串切片代替正则（省 Pattern.compile）
- StringUtils.regexMatcher 用 ConcurrentHashMap<String, Pattern> 缓存
- MybatisUtil.getTableInfo：synchronized HashMap -> 无锁 ClassValue
- clazz.newInstance()（JDK 9+ 废弃）3 处升级 getDeclaredConstructor().newInstance()
- ExQueryWrapper.last(LIMIT ...) 改走 dialect.paginate（为多方言铺路）

## 文档

- CHANGELOG.md：4.0.0.0 完整章节
- MIGRATION-4.0.md：补类名重命名 + dialect 扩展示例 + 行锁示例 + EXISTS 示例
- README.md：项目结构图加 dialect 子包 + 三大设计原则

## 后续路线

- 4.0.1：PostgreSqlDialect + DamengDialect 实现 + 集成测试
- 4.1：WINDOW/CTE/UNION/JSON、stream codegen